--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -459,7 +459,7 @@
 
       <ul class="container social-links list-unstyled d-flex flex-wrap mb-0">
         <li>
-          <a href="#" class="footer__social-link d-block ps-0">
+          <a href="https://www.facebook.com/urbanfarm.org.in?mibextid=ZbWKwL" class="footer__social-link d-block ps-0">
             <svg
               class="svg-icon svg-icon_facebook"
               width="9"
@@ -473,7 +473,7 @@
         </li>
        
         <li>
-          <a href="#" class="footer__social-link d-block">
+          <a href="https://www.instagram.com/urban.farm/?igsh=MTZocHZmcDVydHY3ag%3D%3D" class="footer__social-link d-block">
             <svg
               class="svg-icon svg-icon_instagram"
               width="14"
@@ -540,7 +540,7 @@
         class="social-links list-unstyled custom_header d-flex flex-wrap mb-0"
       >
         <li>
-          <a href="#" class="footer__social-link d-block color-white">
+          <a href="https://www.facebook.com/urbanfarm.org.in?mibextid=ZbWKwL" class="footer__social-link d-block color-white">
             <svg
               class="svg-icon svg-icon_facebook"
               width="9"
@@ -554,7 +554,7 @@
         </li>
        
         <li>
-          <a href="#" class="footer__social-link d-block color-white">
+          <a href="https://www.instagram.com/urban.farm/?igsh=MTZocHZmcDVydHY3ag%3D%3D" class="footer__social-link d-block color-white">
             <svg
               class="svg-icon svg-icon_instagram"
               width="14"
@@ -758,7 +758,7 @@
 
                     <ul class="social-links list-unstyled d-flex flex-wrap mb-0">
                         <li>
-                            <a href="#" class="footer__social-link d-block text-white">
+                            <a href="https://www.facebook.com/urbanfarm.org.in?mibextid=ZbWKwL" class="footer__social-link d-block text-white">
                                 <svg class="svg-icon svg-icon_facebook" width="9" height="15" viewBox="0 0 9 15"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <use href="#icon_facebook" />
@@ -766,7 +766,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="footer__social-link d-block text-white">
+                            <a href="https://www.instagram.com/urban.farm/?igsh=MTZocHZmcDVydHY3ag%3D%3D" class="footer__social-link d-block text-white">
                                 <svg class="svg-icon svg-icon_instagram" width="14" height="13" viewBox="0 0 14 13"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <use href="#icon_instagram" />
