--- a/templates/core/contact_us.html
+++ b/templates/core/contact_us.html
@@ -7,7 +7,7 @@
 
         <div class="row">
             <div class="col-lg-4">
-                <form action="https://uomo-html.flexkitux.com/Demo2/search.php" method="GET">
+                <form action="" method="GET">
                     
 
                     <div class="store-location__search-result">
