--- a/templates/core/about-us.html
+++ b/templates/core/about-us.html
@@ -1,5 +1,18 @@
 {% extends "partials/base.html" %} {% load static %} {% block main %}
     <main>
+        <div class="full-width_padding">
+            <div class="breadcrumb mb-0 d-md-block flex-grow-1">
+              <a href="/" class="menu-link menu-link_us-s text-uppercase fw-medium"
+                >Home</a
+              >
+              <span class="breadcrumb-separator menu-link fw-medium ps-1 pe-1"
+                >&#10093;</span
+              >
+              <a href="#" class="menu-link menu-link_us-s text-uppercase fw-medium"
+                >About Us</a
+              >
+            </div>
+          </div>
         <div class="mb-4 pb-4"></div>
         <section class="about-us container">
             <div class="about-us__content pb-5 mb-5">
