--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -879,67 +879,49 @@
       <a href=" ">
         <img loading="lazy" class="mb-3" src="{% static 'images/banner1/1.jpg' %}" alt="">
       </a>
-      <p class="fw-medium mb-0"><a href=" ">Regular Net Pots</a></p>
+      <p class="fw-medium mb-0"><a href=" "></a></p>
       <p class="mb-0">₹129</p>
     </div>
   '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
         <button class="popover-point type2 position-absolute" style="left: 49%; top: 14%;" data-bs-toggle="popover"
             data-bs-trigger="focus" data-bs-content='
     <div class="popover-product">
-      <a href=" ">
-        <img loading="lazy" class="mb-3" src="{% static 'images/banner1/1.jpg' %}" alt="">
-      </a>
-      <p class="fw-medium mb-0"><a href=" ">Regular Net Pots</a></p>
+      <p class="fw-medium mb-0"><a href=" ">Net Pot</a></p>
       <p class="mb-0">₹129</p>
     </div>
   '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
         <button class="popover-point type2 position-absolute" style="left: 63%; top: 33%;" data-bs-toggle="popover"
             data-bs-trigger="focus" data-bs-content='
     <div class="popover-product">
-      <a href=" ">
-        <img loading="lazy" class="mb-3" src="{% static 'images/banner1/1.jpg' %}" alt="">
-      </a>
-      <p class="fw-medium mb-0"><a href=" ">Regular Net Pots</a></p>
+      <p class="fw-medium mb-0"><a href=" ">Expanded Clay Aggregate</a></p>
       <p class="mb-0">₹129</p>
     </div>
   '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
         <button class="popover-point type2 position-absolute" style="left: 62%; top: 46%;" data-bs-toggle="popover"
             data-bs-trigger="focus" data-bs-placement="top" data-bs-content='
     <div class="popover-product">
-      <a href=" ">
-        <img loading="lazy" class="mb-3" src="{% static 'images/banner1/1.jpg' %}" alt="">
-      </a>
-      <p class="fw-medium mb-0"><a href=" ">Regular Net Pots</a></p>
+      <p class="fw-medium mb-0"><a href=" "></a></p>
       <p class="mb-0">₹129</p>
     </div>
   '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
         <button class="popover-point type2 position-absolute" style="left: 79%; top: 42%;" data-bs-toggle="popover"
             data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
     <div class="popover-product">
-      <a href=" ">
-        <img loading="lazy" class="mb-3" src="{% static 'images/banner1/1.jpg' %}" alt="">
-      </a>
-      <p class="fw-medium mb-0"><a href=" ">Regular Net Pots</a></p>
+      <p class="fw-medium mb-0"><a href=" ">Timer</a></p>
       <p class="mb-0">₹129</p>
     </div>
   '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
         <button class="popover-point type2 position-absolute" style="left:78%; top: 73%;" data-bs-toggle="popover"
             data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
     <div class="popover-product">
-      <a href=" ">
-        <img loading="lazy" class="mb-3" src="{% static 'images/banner1/1.jpg' %}" alt="">
-      </a>
-      <p class="fw-medium mb-0"><a href=" ">Regular Net Pots</a></p>
+      <p class="fw-medium mb-0"><a href=" ">Reserviour</a></p>
       <p class="mb-0">₹129</p>
     </div>
   '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
         <button class="popover-point type2 position-absolute" style="left:75%; top: 87%;" data-bs-toggle="popover"
             data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
     <div class="popover-product">
-      <a href=" ">
-        <img loading="lazy" class="mb-3" src="{% static 'images/banner1/1.jpg' %}" alt="">
-      </a>
-      <p class="fw-medium mb-0"><a href=" ">Regular Net Pots</a></p>
+      <p class="fw-medium mb-0"><a href=" "></a></p>
       <p class="mb-0">₹129</p>
     </div>
   '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
@@ -947,10 +929,7 @@
         <button class="popover-point type2 position-absolute" style="left:55%; top: 87%;" data-bs-toggle="popover"
             data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
   <div class="popover-product">
-    <a href=" ">
-      <img loading="lazy" class="mb-3" src="{% static 'images/banner1/1.jpg' %}" alt="">
-    </a>
-    <p class="fw-medium mb-0"><a href=" ">Regular Net Pots</a></p>
+    <p class="fw-medium mb-0"><a href=" ">Submersible Pump</a></p>
     <p class="mb-0">₹129</p>
   </div>
 '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
@@ -958,10 +937,7 @@
         <button class="popover-point type2 position-absolute" style="left:27%; top: 77%;" data-bs-toggle="popover"
             data-bs-trigger="focus" data-bs-placement="left" data-bs-content='
 <div class="popover-product">
-  <a href=" ">
-    <img loading="lazy" class="mb-3" src="{% static 'images/banner1/1.jpg' %}" alt="">
-  </a>
-  <p class="fw-medium mb-0"><a href=" ">Regular Net Pots</a></p>
+  <p class="fw-medium mb-0"><a href=" ">Openable NFT Channel</a></p>
   <p class="mb-0">₹129</p>
 </div>
 '><span><img src="{% static './images/leaf.svg' %}" width="24px"></span></button>
