--- a/templates/core/category.html
+++ b/templates/core/category.html
@@ -3,13 +3,13 @@
 <main>
   <div class="full-width_padding">
     <div class="breadcrumb mb-0 d-md-block flex-grow-1">
-      <a href="#" class="menu-link menu-link_us-s text-uppercase fw-medium"
+      <a href="/" class="menu-link menu-link_us-s text-uppercase fw-medium"
         >Home</a
       >
       <span class="breadcrumb-separator menu-link fw-medium ps-1 pe-1"
         >&#10093;</span
       >
-      <a href="#" class="menu-link menu-link_us-s text-uppercase fw-medium"
+      <a href="/shop-category" class="menu-link menu-link_us-s text-uppercase fw-medium"
         >Category</a
       >
       <span class="breadcrumb-separator menu-link fw-medium ps-1 pe-1"
