Add grow method page

--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -41,8 +41,8 @@
                             </div>
                             <div class="col-6">
 
-                                <div class="noo-atributes">
-                                    <!-- <img width="494" height="618" src="{% static 'images/image-01.png' %}" alt="" /> -->
+                                {% comment %} <div class="noo-atributes">
+                                     <img width="494" height="618" src="{% static 'images/image-01.png' %}" alt="" /> 
                                     <div class="noo-atributes-item noo-atributes-item1">
                                         <div class="noo-atributes-hover">
                                             <div class="noo-atributes-content">
@@ -82,7 +82,7 @@
                                             <img width="24" src="{% static "images/leaf.svg" %}" alt="" />
                                         </span>
                                     </div>
-                                </div>
+                                </div> {% endcomment %}
                             </div>
                         </div>
 
@@ -95,7 +95,7 @@
                         <h2 class="fs-50 fw-bold mb-2 mb-lg-4 animate animate_fade animate_btt animate_delay-5 lh-1"
                             style="color: #074e37 !important;">
                             Hydroponic Expertise!</h2>
-                        <a href="category.html"
+                        <a href="/shop-category"
                             class="btn btn-outline-primary border-0 fs-base text-uppercase fw-medium animate animate_fade animate_btt animate_delay-7 btn-551">Shop
                             Now</a>
                     </div>
@@ -107,28 +107,7 @@
                         <img loading="lazy" src="{% static "images/banner1/1.jpg" %}" width="1903" height="560" alt="Pattern"
                             class="slideshow-bg__img object-fit-cover">
                     </div>
-                    <!-- <div class="position-absolute left-0 right-0 bottom-0 top-0 container">
-          <div class="slideshow-character position-absolute position-right-center mx-xl-5">
-            <img loading="lazy" src="" width="518" height="329"
-              alt="Woman Fashion 1"
-              class="slideshow-character__img animate animate_fade animate_btt animate_delay-9 w-auto h-auto">
-          </div>
-        </div> -->
                     <div class="slideshow-text container position-absolute start-50 top-50 translate-middle">
-
-
-                        <!-- <h6
-            class="text_dash text-uppercase fs-base fw-medium animate animate_fade animate_btt animate_delay-3 theme-color">
-            Shop Our Freshest</h6>
-          <h2 class="fs-50 fw-bold mb-2 mb-lg-3 animate animate_fade animate_btt animate_delay-5 lh-1"
-            style="color: #074e37 !important;">
-            Soil-Free, Greener Glee: Discover </h2>
-          <h2 class="fs-50 fw-bold mb-2 mb-lg-4 animate animate_fade animate_btt animate_delay-5 lh-1"
-            style="color: #074e37 !important;">
-            Hydroponic Majesty</h2>
-          <a href="category.html"
-            class="btn btn-outline-primary border-0 fs-base text-uppercase fw-medium animate animate_fade animate_btt animate_delay-7 btn-551">Shop
-            Now</a> -->
                     </div>
                 </div>
             </div><!-- /.slideshow-item -->
@@ -138,28 +117,7 @@
                         <img loading="lazy" src="{% static "images/banner1/2.jpg" %}" width="1903" height="560" alt="Pattern"
                             class="slideshow-bg__img object-fit-cover">
                     </div>
-                    <!-- <div class="position-absolute left-0 right-0 bottom-0 top-0 container">
-          <div class="slideshow-character position-absolute position-right-center mx-xl-5">
-            <img loading="lazy" src="" width="518" height="329"
-              alt="Woman Fashion 1"
-              class="slideshow-character__img animate animate_fade animate_btt animate_delay-9 w-auto h-auto">
-          </div>
-        </div> -->
                     <div class="slideshow-text container position-absolute start-50 top-50 translate-middle">
-
-
-                        <!-- <h6
-            class="text_dash text-uppercase fs-base fw-medium animate animate_fade animate_btt animate_delay-3 theme-color">
-            Shop Our Freshest</h6>
-          <h2 class="fs-50 fw-bold mb-2 mb-lg-3 animate animate_fade animate_btt animate_delay-5 lh-1"
-            style="color: #074e37 !important;">
-            Soil-Free, Greener Glee: Discover </h2>
-          <h2 class="fs-50 fw-bold mb-2 mb-lg-4 animate animate_fade animate_btt animate_delay-5 lh-1"
-            style="color: #074e37 !important;">
-            Hydroponic Majesty</h2>
-          <a href="category.html"
-            class="btn btn-outline-primary border-0 fs-base text-uppercase fw-medium animate animate_fade animate_btt animate_delay-7 btn-551">Shop
-            Now</a> -->
                     </div>
                 </div>
             </div><!-- /.slideshow-item -->
@@ -172,18 +130,6 @@
                     </div>
 
                     <div class="slideshow-text container position-absolute start-50 top-50 translate-middle">
-                        <!-- <h6
-            class="text_dash text-uppercase fs-base fw-medium animate animate_fade animate_btt animate_delay-3 theme-color">
-            Shop Our Freshest</h6>
-          <h2 class="fs-50 fw-bold mb-2 mb-lg-3 animate animate_fade animate_btt animate_delay-5 lh-1"
-            style="color: #074e37 !important;">
-            Small Footprint, Green Impact: </h2>
-          <h2 class="fs-50 fw-bold mb-2 mb-lg-4 animate animate_fade animate_btt animate_delay-5 lh-1"
-            style="color: #074e37 !important">
-            Hydroponics Revolution</h2>
-          <a href="category.html"
-            class="btn btn-outline-primary border-0 fs-base text-uppercase fw-medium animate animate_fade animate_btt animate_delay-7 btn-551">Shop
-            Now</a> -->
                     </div>
                 </div>
             </div><!-- /.slideshow-item -->
@@ -196,18 +142,6 @@
                     </div>
 
                     <div class="slideshow-text container position-absolute start-50 top-50 translate-middle">
-                        <!-- <h6
-            class="text_dash text-uppercase fs-base fw-medium animate animate_fade animate_btt animate_delay-3 theme-color">
-            Shop Our Freshest</h6>
-          <h2 class="fs-50 fw-bold mb-2 mb-lg-3 animate animate_fade animate_btt animate_delay-5 lh-1"
-            style="color: #074e37 !important;">
-            Small Footprint, Green Impact: </h2>
-          <h2 class="fs-50 fw-bold mb-2 mb-lg-4 animate animate_fade animate_btt animate_delay-5 lh-1"
-            style="color: #074e37 !important">
-            Hydroponics Revolution</h2>
-          <a href="category.html"
-            class="btn btn-outline-primary border-0 fs-base text-uppercase fw-medium animate animate_fade animate_btt animate_delay-7 btn-551">Shop
-            Now</a> -->
                     </div>
                 </div>
             </div><!-- /.slideshow-item -->
@@ -259,7 +193,7 @@
                     deals!
                 </h3>
                 <button class="btn btn-outline-primary border-0 fs-base text-uppercase fw-medium btn-55">
-                    <a href="category.html"> <span>Shop Now</span></a>
+                    <a href="/shop-category"> <span>Shop Now</span></a>
                 </button>
             </div>
         </div>
