--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -379,7 +379,7 @@
             <a href="/shop-category" class="navigation__link">Category</a>
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link">Grow Method</a>
+            <a href="/grow-method" class="navigation__link">Grow Method</a>
           </li>
 
           <li class="navigation__item">
@@ -590,7 +590,7 @@
           <a href="/shop-category" class="navigation__link">Category</a>
         </li>
         <li class="navigation__item">
-          <a href="#" class="navigation__link">Grow Method</a>
+          <a href="/grow-method" class="navigation__link">Grow Method</a>
         </li>
         <li class="navigation__item">
           <a href="/contact-us" class="navigation__link">Contact</a>
